<resources>
    <string name="app_name">SuiQuiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question_su">Is Suiseiseki a independent country in 1444?</string>
    <string name="question_sea">Will Seagie explore the new world when first idea finished?</string>
    <string name="question_budong">Can Budong empire turn to Purity Black?</string>
    <string name="question_chuan">Chuan can reform into Purity\'Black if their religion is reformed</string>
    <string name="question_jack">Handsome Jack can westlize before reforming the government</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="question_yingcai">Yingcai has best Navy</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong</string>
    <string name="api_version_level">API level</string>
</resources>
